Fix background to the body so resized contents dont shift around the gingham pattern

--- a/themes/minimal/static/css/style.css
+++ b/themes/minimal/static/css/style.css
@@ -53,6 +53,7 @@ body {
             var(--gingham-red) 20px,
             var(--gingham-red) 40px
         );
+        background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
